@@ -1,3 +1,9 @@
+[autoplace-control-names]
+titanium-ore=__ENTITY__titanium-ore__
+
+[entity-name]
+titanium-ore=Titanium ore
+
 [fluid-name]
 aerated-lubricant=Aerated lubricant
 refined-lubricant=Refined lubricant
