@@ -1,0 +1,144 @@
+data:extend(
+{
+  {
+    type = "particle",
+    name = "titanium-ore-particle",
+    flags = {"not-on-map"},
+    life_time = 180,
+    pictures =
+    {
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-1.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-1.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      },
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-2.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-2.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      },
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-3.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-3.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      },
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-4.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-4.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      }
+    },
+    shadows =
+    {
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-shadow-1.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-shadow-1.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      },
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-shadow-2.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-shadow-2.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      },
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-shadow-3.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-shadow-3.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      },
+      {
+        filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/titanium-ore-particle-shadow-4.png",
+        priority = "extra-high",
+        width = 16,
+        height = 16,
+        frame_count = 1,
+        hr_version =
+        {
+          filename = "__spicy-teeth-core_assets__/graphics/entity/titanium-ore-particle/hr-titanium-ore-particle-shadow-4.png",
+          priority = "extra-high",
+          width = 32,
+          height = 32,
+          frame_count = 1,
+          scale = 0.5
+        }
+      }
+    }
+  }
+}
+)
